--- a/old/old2/home.html
+++ b/old/old2/home.html
@@ -18,6 +18,7 @@
         }
 
     </style>
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -28,7 +29,7 @@
 </div>
 
 <div class="Navbar">
-    <img src="images/Frame.png" class="Mascot"/>
+    <img src ="images/Frame.png" class="Mascot"/>
     <img src="images/Mimic.png" class="Logo"/>
     <img src="images/findClub.png" class="FC"/>
     <img src="images/findFriend.png" class="FF"/>
@@ -63,15 +64,15 @@
         <select id="videoSource"></select>
     </div>
     <br>
+
     <div>
-        <button id="record" disabled><img src="images/record.png"></button>
-        <button id="download" disabled><img src="images/download.png"></button>
+        <button id="record" disabled>Start Recording</button>
+        <button id="download" disabled>Download</button>
     </div>
 
     <div>
         Recording format: <select id="codecPreferences" disabled></select>
     </div>
-
 </div>
 
 <!-- This file is automatically added/served when running "node index.js". -->
