--- a/old/temp_dh/home.html
+++ b/old/temp_dh/home.html
@@ -64,14 +64,20 @@
     </div>
     <br>
     <div>
+        <button id="record" disabled>Start Recording</button>
+        <button id="download" disabled>Download</button>
+    </div>
+    <!--
+    <div>
         <button id="record" disabled><img src="images/record.png"></button>
         <button id="download" disabled><img src="images/download.png"></button>
     </div>
-
-    <div>
+    -->
+<!--
+    <div> 미관을 너무 해친다...나중에 보기좋게 해서 추가하던가 하자
         Recording format: <select id="codecPreferences" disabled></select>
     </div>
-
+-->
 </div>
 
 <!-- This file is automatically added/served when running "node index.js". -->
