--- a/old/workingversion/home.html
+++ b/old/workingversion/home.html
@@ -22,13 +22,13 @@
 </head>
 
 <body>
-
+<!-- latest working version in 10/10 by hook-->
 <div class="ChatBox">
     <img src="images/ChatBox.png" class="CB">
 </div>
 
 <div class="Navbar">
-    <img src="images/Frame.png" class="Mascot"/>
+    <img src ="images/Frame.png" class="Mascot"/>
     <img src="images/Mimic.png" class="Logo"/>
     <img src="images/findClub.png" class="FC"/>
     <img src="images/findFriend.png" class="FF"/>
@@ -63,15 +63,15 @@
         <select id="videoSource"></select>
     </div>
     <br>
+
     <div>
-        <button id="record" disabled><img src="images/record.png"></button>
-        <button id="download" disabled><img src="images/download.png"></button>
+        <button id="record" disabled>Start Recording</button>
+        <button id="download" disabled>Download</button>
     </div>
 
     <div>
         Recording format: <select id="codecPreferences" disabled></select>
     </div>
-
 </div>
 
 <!-- This file is automatically added/served when running "node index.js". -->
