--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span>▶</span>
       <span>▼</span>
     </div>
-    <input type="image" src = "images/MyClub.png" class="MyClub" onclick="movepage()"/>
+    <input type="image" src = "./images/MyClub.png" class="MyClub" onclick="movepage()"/>
     <img src="images/createClub.png" class="CC"/>
   </div>
 
